--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Spring allication ###
+src/main/resources/application.properties
+
+### Gradle ###
+build.gradle
+settings.gradle
