--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.datasource.password=1234
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #엔티티 따라 자동 업데이트
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
